2008-03-11  Ramon Novoa  <rnovoa@artica.es>

	* linux/pandora_agent: Added support for Tentacle file transfers.
	* linux/pandora_agent.conf: Added Tentacle specific options.

2008-03-11 Manuel Arostegui <marostegui@artica.es>

	* linux/pandora_agent_daemon: Added pidof checking to
	check the PID of the process.

2008-01-11 Sancho Lerena <slerena@gmail.com>

	* linux: New default modules for agent and deleted some other.
	Updated version.

2008-01-10 Sancho Lerena <slerena@gmail.com>

	* Deleted from 1.3.1 repository code from mac_osx and openwrt.

	* Win32: Deleted old installer exes.        

2008-01-08 Sancho Lerena <slerena@gmail.com>

	* mac_osx/*: Added code for Mac OsX Agent contributed by Evi Vanoost.

2008-01-02 Sancho lerena <slerena@gmail.com>

	* openWRT/*: Added code for new ASYNC agent for OpenWRT/Arduino
	agent, this would be the new SYNC/ASYNC agent for Pandora FMS 2.0.
	This is first development version, DO NOT TEST YET. It has several
	code specific for OpenWRT enviroment.

2007-09-14 Sancho Lerena <slerena@gmail.com>

	* Deleted a lot of old stuff (licenses, readmes, etc). Put on agent root dir

2007-08-29  Raul Mateos  <raulofpandora@gmail.com>

	* win32/bin/pandora_agent.conf: Added comments about usage and samples.

2007-08-27  Raul Mateos  <raulofpandora@gmail.com>

	* win32/installer/How_to_create_installer.txt: Changed mpi name.
	Added libcurl.dll and more info.

2007-08-23  Sancho Lerena <slerena@artica.es>

	* linux/pandora_agent_installer: Fixed problem with /var/log/pandora

	* linux/README: Added, replacing old INSTALL file.

	* linux/pandora_agent: Fixed problem with old path /var/log/pandora_agent.log

2007-08-20  Sancho Lerena <slerena@artica.es>

	New version of Pandora Agent for Windows (beta2).

	* win32/bin/key/id_dsa*: Added sample keys.

	* win32/installer/logo.png: Updated logo for installer.

	* win32/installer/Pandora_Windows_Agent-1.3.0 Beta2-Setup.exe: New installer binary.
